--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url('/images/background.webp');
+    background-image: url('./images/background.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
